Add long explanation

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "name": "ai",
     "prompt": "Artificial intelligence is the next big technological innovation that will have a positive impact on chip manufacturers, data companies, data centers, and power generation companies.",
+    "explanation": "Now is an opportune moment to consider investing in the AI sector due to several converging factors. The rapid advancement in AI technology, coupled with increasing data generation, is driving demand for more sophisticated and efficient chip manufacturing. Data companies and data centers are scaling up to manage and process vast amounts of information, and power generation companies are innovating to meet the energy needs of these operations. As these sectors evolve, they present promising opportunities for growth and innovation.",
     "github_repo": "ai"
 }
